# faitness

./: .dockerignore  .gitignore  README.dev.md  README.md  dev.sh  docker-compose.dev.yml  docker-compose.yml  package-lock.json  package.json
.github/workflows/: deploy.yml
ai/chat/: .env  README.md  package-lock.json  package.json  tsconfig.json
ai/mcp-server/: .dockerignore  (+7 more)
backend/: .env  .env.docker  .env.example  Dockerfile  Dockerfile.dev  docker-compose.yml  package-lock.json  package.json  pyproject.toml  tsconfig.json
backend/api/: index.ts
backend/api/routes/: exercise.routes.ts  index.ts  ingredient.routes.ts  meal.routes.ts  mealDay.routes.ts  set.routes.ts  user.routes.ts  workout.routes.ts
backend/api/schemas/: exercise.schema.ts  index.ts  ingredient.schema.ts  meal.schema.ts  mealDay.schema.ts  set.schema.ts  user.schema.ts  workout.schema.ts
backend/app/: main.py
backend/app/api/v1/endpoints/: exercises.py  ingredients.py  meal_days.py  meals.py  sets.py  users.py  workouts.py
backend/app/core/: crud_helpers.py  decorators.py  error_handlers.py  exceptions.py
backend/app/models/: exercise.py  exercises.py  ingredient.py  meal.py  meal_day.py  set.py  user.py  workout.py
backend/database/: config.ts  connection.ts  db.py  init.sql
backend/mcp_server/: README.md  example_usage.py
backend/mcp_server/tools/: __init__.py  exercise_tools.py  ingredient_tools.py  meal_day_tools.py  meal_tools.py  set_tools.py  user_tools.py  workout_tools.py
frontend/: .dockerignore  Dockerfile  Dockerfile.dev  nginx.conf  package.json  vite.config.ts
(+14 files in other folders)
